# test

.github/workflows/: codeql.yml
10.vaja/naloga1001/: CMakeLists.txt  Date.h  Difficulty.h  Excercise.cpp  Exercise.h  ExerciseTracker.cpp  ExerciseTracker.h  PrintIfStrengthExercise.cpp  PrintIfStrengthExercise.h  StrengthExercise.h  Time.cpp  Time.h  WeightLog.cpp  WeightLog.h  naloga1001.cpp
10.vaja/naloga1002/: CMakeLists.txt  Printer.cpp  Printer.h  naloga1002.cpp
11.vaja/naloga1101/: CMakeLists.txt  InvalidLocationExeption.cpp  InvalidLocationExeption.h  PressureSensor.cpp  PressureSensor.h  PressureSensorP12.cpp  PressureSensorP12.h  Sensor.cpp  Sensor.h  SensorHub.cpp  SensorHub.h  naloga1101.cpp
11.vaja/naloga1102/: CMakeLists.txt  DuplicatedSensorIdExeption.cpp  DuplicatedSensorIdExeption.h  FileAccessException.cpp  FileAccessException.h  Log.cpp  Log.h  LogType.h  PressureSensor.cpp  PressureSensor.h  PressureSensorP12.cpp  PressureSensorP12.h  PressureUnit.h  Sensor.cpp  Sensor.h  SensorHub.cpp  SensorHub.h  naloga1101.cpp
3.vaja/naloga0301/: CMakeLists.txt  naloga0301.cpp  time.cpp  time.h
3.vaja/naloga0302/: CMakeLists.txt  (+3 more)
4.vaja/naloga0402/: CMakeLists.txt  Date.h  DateTime.cpp  DateTime.h  Mailbox.cpp  Mailbox.h  Message.cpp  Message.h  Priority.h  Time.cpp  Time.h  User.cpp  User.h  naloga0402.cpp
priprava_nakolokvij01/: CMakeLists.txt  priprava_na_kolokvij.cpp
priprava_nakolokvij02/: CMakeLists.txt  Date.cpp  Date.h  FileNotFound.cpp  FileNotFound.h  Fuel.cpp  Fuel.h  UnparsableDateException.cpp  UnparsableDateException.h  main.cpp
(+71 files in other folders)
